# simple-phishing-detection-using-llm

./: README.md  conversations.py  llm.py  main.py  phishing.py  pyproject.toml  testing.ipynb  testing_finetuned.ipynb
tests/: conversations_test.py  phishing_test.py
