[project]
name = "llm-in-cybersecurity"
version = "0.1.0"
description = "Simple Phishing Email Detection App"
readme = "README.md"
requires-python = "==3.12.3"
dependencies = [
    "datasets>=3.3.2",
    "matplotlib>=3.10.1",
    "openai>=1.65.5",
    "packaging>=24.2",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "streamlit>=1.43.1",
    "unsloth>=2025.3.9",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
